deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
  namespace: prod
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: myapp
          image: ahmedelsheiry/web01:latest
          ports:
            - containerPort: 80
